# altrisia

./: .gitignore  README.md
backend/: .gitignore  api.py  get_supabase.py  main.py  pyproject.toml  requirements.txt
backend/database/: .env.example  database.py  datasession.py  get_supabase.py  hash_pass.py  models.py  schemas.py
backend/routers/: categories.py  posts.py  search.py  users.py
frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/annonce/[id]/: page.jsx
frontend/app/category/[id]/: page.jsx
frontend/app/components/: Annonce.jsx  CTA.jsx  FilterBar.jsx  Footer.jsx  Nav.jsx  PageNumberBar.jsx
frontend/app/components/ui/: Button.jsx  Input.jsx  Logo.jsx  SearchBar.jsx
frontend/app/delete_profile/: page.js
frontend/app/edit/[id]/: page.jsx
frontend/app/edit_profile/: page.js
frontend/app/login/: page.js
frontend/app/new-post/: page.jsx
frontend/app/profile/: page.js
frontend/app/registration/: page.js
frontend/app/services/: annonces.js  categories.js
